adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>hello, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam incidunt excepturi deserunt laudantium quibusdam necessitatibus nobis enim adipisci ipsa! Debitis, harum voluptatibus. Eos ut ipsa officia fugiat laboriosam nihil reprehenderit?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti explicabo beatae in, et praesentium cumque ut voluptates quas delectus sint dignissimos iusto atque debitis, eos totam, natus nulla repudiandae nesciunt.</p>
 </body>
 </html>
